--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,11 @@ project(TPFinal)
 
 set(CMAKE_CXX_STANDARD 11)
 file(GLOB SOURCES
-        *.h
-        *.cpp
+        "VistasSDL/*.h"
+        "VistasSDL/*.cpp"
         )
 #set(SOURCE_FILES
 #        )
+set (CMAKE_SHARED_LINKER_FLAGS "-Wl,-lSDL2 -lSDL2_image")
 
 add_executable(TPFinal  ${SOURCES})
