--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,25 +19,22 @@ file(GLOB VISTA_SRC
 
 
 set(SDL2_INCLUDE_DIR /usr/include/SDL2)
-#set(SDL2_LIBRARY /usr/lib64/libSDL2.so)
-set(SDL2_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2.so)
+set(SDL2_LIBRARY /usr/lib64/libSDL2.so)
+#set(SDL2_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2.so)
 
-#set(SDL2_IMG_LIBRARY /usr/lib64/libSDL2_image.so)
-set(SDL2_IMG_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_image.so)
+set(SDL2_IMG_LIBRARY /usr/lib64/libSDL2_image.so)
+#set(SDL2_IMG_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_image.so)
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 find_package(Threads REQUIRED)
 
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
-
-add_definitions(${GTK3_CFLAGS_OTHER})
 
 
-include_directories(${SDL2_INCLUDE_DIR} ${GTK3_INCLUDE_DIRS})
-link_directories(${GTK3_LIBRARY_DIRS})
+include_directories(${SDL2_INCLUDE_DIR})
+
 
 
 add_executable(vista  ${VISTA_SRC})
-target_link_libraries(vista ${SDL2_LIBRARY} ${SDL2_IMG_LIBRARY} Threads::Threads ${GTK3_LIBRARIES})
+target_link_libraries(vista ${SDL2_LIBRARY} ${SDL2_IMG_LIBRARY} Threads::Threads)
