--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.6)
 project(TPFinal)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${TPFinal_SOURCE_DIR}/cmakeFind")
 
 #cada uno tiene que agregar su file(GLOB MIPARTE_SRC wildcardsDeLosArchivos) y
 #add_executable() con sus sources y el nombre del exe y tambien agregar las
@@ -11,18 +12,15 @@ set(CMAKE_CXX_STANDARD 11)
 #y ahi quedan los execs de cada uno dentro de build.
 #tuve que hardcodear sdl2 porque no pude hacerlo de la manera correcta.
 
-file(GLOB VISTA_SRC
-        "client/Header Files/*.h"
-        "client/*.cpp"
-	"client/Vistas/*.cpp"
-        )
+find_package(SDL2 REQUIRED)
+find_package(SDL2_image REQUIRED)
+find_package(TinyXML2 REQUIRED)
 
-
-set(SDL2_INCLUDE_DIR /usr/include/SDL2)
-set(SDL2_LIBRARY /usr/lib64/libSDL2.so)
+#set(SDL2_INCLUDE_DIR /usr/include/SDL2)
+#set(SDL2_LIBRARY /usr/lib64/libSDL2.so)
 #set(SDL2_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2.so)
 
-set(SDL2_IMG_LIBRARY /usr/lib64/libSDL2_image.so)
+#set(SDL2_IMG_LIBRARY /usr/lib64/libSDL2_image.so)
 #set(SDL2_IMG_LIBRARY /usr/lib/x86_64-linux-gnu/libSDL2_image.so)
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
@@ -30,11 +28,28 @@ set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 find_package(Threads REQUIRED)
 
 find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+
+add_definitions(${GTK3_CFLAGS_OTHER})
+
+include_directories(${SDL2_INCLUDE_DIR} ${GTK3_INCLUDE_DIRS}${TINYXL2_INCLUDE_DIR})
+link_directories(${GTK3_LIBRARY_DIRS}${TINYXML2_LIBRARIES})
+
+file(GLOB VISTA_SRC
+        "client/Header Files/*.h"
+        "client/*.cpp"
+		"client/Vistas/*.cpp"
+        )
+
+add_executable(vista ${VISTA_SRC})
+target_link_libraries(vista ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES} Threads::Threads ${GTK3_LIBRARIES})
+
+file(GLOB SERVER_SRC
+		"server/*.h"
+		"server/*.cpp"
+		)
+
+add_executable(server ${SERVER_SRC})
+target_link_libraries(server ${TINYXML2_LIBRARIES} Threads::Threads)
 
 
-include_directories(${SDL2_INCLUDE_DIR})
-
-
-
-add_executable(vista  ${VISTA_SRC})
-target_link_libraries(vista ${SDL2_LIBRARY} ${SDL2_IMG_LIBRARY} Threads::Threads)
